# web_api_prod

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: local.yaml  production.yaml
migrations/: 20230121033321_create_subscription_table.sql
scripts/: fly_db_migrate.sh  fly_init_app.sh  init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domains/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
