[package]
name = "web_api_prod"
version = "0.1.0"
authors = ["Jared Tokuz <jtokuz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_api_prod"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
config = "0.13"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
tracing-error = "0.2"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1.10.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]


[dev-dependencies]
reqwest = "0.11"
